fixes using color contrast and em tags

--- a/0x01-accessibility/0-accessibility/styles.css
+++ b/0x01-accessibility/0-accessibility/styles.css
@@ -5,7 +5,11 @@
 
 body {
     margin: 40px;
-    background: #FF00FF;
+    background: #010101;
     color: #00FF00;
     font-size: 1.5em;
+}
+
+i {
+  font-style: italic;
 }
